--- a/webapp/src/main/resources/templates/fleet/editemployee.html
+++ b/webapp/src/main/resources/templates/fleet/editemployee.html
@@ -16,31 +16,31 @@
 
 
 
-            <form method="POST" th:object="${employee}"  action="/fleet/editemployee">
+            <form method="POST" th:object="${employee}"  action="/fleet/editemployee" style="width: 50%;">
                 <div th:class="${#fields.hasErrors('name')}? 'has-error'">
                     <label th:for="${#ids.next('name')}"><p th:text="#{employee.namem}"> name </p> </label>
                     <input type="text" th:field="*{name}" class="form-control"/>
-                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="val-error"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('email')}? 'has-error'">
                     <label th:for="${#ids.next('email')}"><p th:text="#{employee.mailm}"> mail  </p></label>
                     <input type="text" th:field="*{email}" class="form-control"/>
-                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+                    <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="val-error"></span>
                 </div>
 
 
                 <div th:class="${#fields.hasErrors('functionalLevel')}? 'has-error'">
                     <label th:for="${#ids.next('functionalLevel')}"> <p th:text="#{employee.funclevelm}"> functional level </p> </label>
                     <input type="number" min="0" max="8" th:field="*{functionalLevel}" class="form-control"/>
-                    <span th:if="${#fields.hasErrors('functionalLevel')}" th:errors="*{functionalLevel}"></span>
+                    <span th:if="${#fields.hasErrors('functionalLevel')}" th:errors="*{functionalLevel}" class="val-error"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('inServiceDate')}? 'has-error'">
                     <label th:for="${#ids.next('inServiceDate')}"> <p th:text="#{employee.servicedatem}"> servicedate  </p> </label>
 
-                    <input type="text"  id="datepicker" th:field="*{inServiceDate}" placeholder="MM/DD/YYYY" class="form-control"/>
-                    <span th:if="${#fields.hasErrors('inServiceDate')}" th:errors="*{inServiceDate}"></span>
+                    <input type="text" id="inServiceDate" th:field="*{inServiceDate}" placeholder="MM/DD/YYYY" class="form-control"/>
+                    <span th:if="${#fields.hasErrors('inServiceDate')}" th:errors="*{inServiceDate}" class="val-error"></span>
                 </div>
 
 
@@ -50,7 +50,7 @@
                         <option th:each="rol : ${T(com.realdolmen.fleet.enums.EmployeeType).values()}" th:value="${rol}" th:text="${rol}" ></option>
                     </select>
 
-                    <span th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></span>
+                    <span th:if="${#fields.hasErrors('role')}" th:errors="*{role}" class="val-error"></span>
                 </div>
 
                 <input type="hidden" th:field="*{id}" />
