--- a/webapp/src/main/resources/templates/fleet/optionselection.html
+++ b/webapp/src/main/resources/templates/fleet/optionselection.html
@@ -4,15 +4,15 @@
 <div th:replace="fragments/fragments :: header"></div>
 <div th:replace="fragments/fragments :: div.scripts"></div>
 <script type="text/javascript" charset="utf-8">
-    $(document).ready( function () {
+    $(document).ready(function () {
         $('#allPacks').dataTable().columnFilter();
 
-    } );
+    });
 
-    $(document).ready( function () {
+    $(document).ready(function () {
         $('#allOptions').dataTable().columnFilter();
 
-    } );
+    });
 
 </script>
 
@@ -21,130 +21,125 @@
     <div class="row">
         <div class="col-lg-12">
 
-<h1> <b> <p th:text="${car.brand} + '  ' +  ${car.model}" >brand + model </p> </b> </h1>
+            <h1><b><p th:text="${car.brand} + '  ' +  ${car.model}">brand + model </p></b></h1>
 
-            <h4> <a th:href="${#mvc.url('CCC#saveCar').arg(0, car.id).build()}"  class="btn btn-primary"> <p th:text="#{car.savenew}"> Save New Car </p> </a> </h4>
-
-
-    <div style="float:left; width: 40%">
-    <h3> <p th:text="#{car.basepacks}"> bse pack</p></h3>
-
-    <p id="basepack2"  th:if="${car.basePack != null}" th:text="${car.basePack.name}">     </p>
-        <p id="basepack"></p>
-
-    <h3>  <p th:text="#{car.optionalpacks}"> otpional pack</p></h3>
-
-    <table id="extrapacks">
-        <tr th:each="expack, idStat  : ${car.extraPacks}">
-
-            <td th:text="${expack.name}">1</td>
-
-            <td>  <a  th:onclick="'javascript:removeExtraPack(this);'"
-                      class="btn btn-primary form-control" th:text="#{car.removepack}">remove</a> </td>
+            <h4><a th:href="${#mvc.url('CCC#saveCar').arg(0, car.id).build()}" class="btn btn-primary"><p
+                    th:text="#{car.savenew}"> Save New Car </p></a></h4>
 
 
+            <div style="float:left; width: 44%">
+                <h3><p th:text="#{car.basepacks}"> bse pack</p></h3>
 
-        </tr>
-    </table>
+                <p id="basepack2" th:if="${car.basePack != null}" th:text="${car.basePack.name}"></p>
 
-    <h3> <p th:text="#{car.extraposoptions}"> extra pos optios</p></h3>
-    <table id="extraoptions">
-        <tr th:each="opt, idStat  : ${car.extraOptions}">
+                <p id="basepack"></p>
 
-            <td th:text="${opt.name}">1</td>
+                <h3><p th:text="#{car.optionalpacks}"> otpional pack</p></h3>
 
+                <table id="extrapacks">
+                    <tr th:each="expack, idStat  : ${car.extraPacks}">
 
-            <td>  <a  th:onclick="'javascript:removeExtraOption(this);'"
-                      class="btn btn-primary form-control" th:text="#{car.removeoption}">remove</a> </td>
+                        <td th:text="${expack.name}">1</td>
 
-
-
-        </tr>
-    </table>
-
-</div>
+                        <td><a th:onclick="'javascript:removeExtraPack(this);'"
+                               class="btn btn-primary form-control" th:text="#{car.removepack}">remove</a></td>
 
 
+                    </tr>
+                </table>
 
-<div style="float:left; width: 55%">
-    <h2> <p th:text="#{car.allpacks}"> all packs </p></h2>
-    <table id="allPacks">
-        <thead>
-        <tr>
-            <th><p th:text="#{pack.name}"> Name </p> </th>
-            <th><p th:text="#{pack.price}"> Price </p> </th>
-            <th></th>
-            <th></th>
-        </tr>
-        </thead>
-        <tfoot>
-        <tr>
-            <th><p th:text="#{pack.name}"> Name </p> </th>
-            <th><p th:text="#{pack.price}"> Price </p> </th>
-        </tr>
-        </tfoot>
+                <h3><p th:text="#{car.extraposoptions}"> extra pos optios</p></h3>
+                <table id="extraoptions">
+                    <tr th:each="opt, idStat  : ${car.extraOptions}">
 
-        <tbody>
+                        <td th:text="${opt.name}">1</td>
 
 
-        <tr th:each="pack  : ${packList}">
-
-            <td th:text="${pack.name}"></td>
-
-            <td th:text="${pack.price}"></td>
-
-            <td>  <a th:onclick="'javascript:setBasePack(\'' + ${pack.id} + '\',\'' + ${pack.name}+ '\');'"
-                     class="btn btn-primary form-control" th:text="#{car.setbasepack}">add </a> </td>
-
-            <td>  <a th:onclick="'javascript:addExtraPack(\'' + ${pack.id} + '\',\'' + ${pack.name}+ '\');'"
-                     class="btn btn-primary form-control" th:text="#{car.addextrapack}">add </a> </td>
+                        <td><a th:onclick="'javascript:removeExtraOption(this);'"
+                               class="btn btn-primary form-control" th:text="#{car.removeoption}">remove</a></td>
 
 
+                    </tr>
+                </table>
+
+            </div>
 
 
-        </tr>
-        </tbody>
-    </table>
+            <div style="float:right; width: 54%">
+                <h2><p th:text="#{car.allpacks}"> all packs </p></h2>
+                <table id="allPacks">
+                    <thead>
+                    <tr>
+                        <th><p th:text="#{pack.name}"> Name </p></th>
+                        <th><p th:text="#{pack.price}"> Price </p></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tfoot>
+                    <tr>
+                        <th><p th:text="#{pack.name}"> Name </p></th>
+                        <th><p th:text="#{pack.price}"> Price </p></th>
+                    </tr>
+                    </tfoot>
+
+                    <tbody>
 
 
-    <h2> <p th:text="#{car.alloptions}"> allopitons </p> </h2>
-    <table id="allOptions">
-        <thead>
-        <tr>
-            <th><p th:text="#{option.name}"> Name </p> </th>
-            <th><p th:text="#{option.description}"> Description</p></th>
-            <th></th>
+                    <tr th:each="pack  : ${packList}">
 
-        </tr>
-        </thead>
-        <tfoot>
-        <tr>
-            <th><p th:text="#{option.name}"> Name </p> </th>
-            <th><p th:text="#{option.description}"> Description</p></th>
-        </tr>
-        </tfoot>
+                        <td th:text="${pack.name}"></td>
 
-        <tbody>
+                        <td th:text="${#numbers.formatDecimal(pack.price,1,2)}"></td>
+
+                        <td><a th:onclick="'javascript:setBasePack(\'' + ${pack.id} + '\',\'' + ${pack.name}+ '\');'"
+                               class="btn btn-primary form-control" th:text="#{car.setbasepack}">add </a></td>
+
+                        <td><a th:onclick="'javascript:addExtraPack(\'' + ${pack.id} + '\',\'' + ${pack.name}+ '\');'"
+                               class="btn btn-primary form-control" th:text="#{car.addextrapack}">add </a></td>
 
 
-        <tr th:each="option  : ${optionList}">
-
-            <td th:text="${option.name}"></td>
-
-            <td th:text="${option.description}"></td>
-
-            <td> <a th:href="${#mvc.url('CCC#addExtraOption').arg(0, option.id).build()}" > <p th:text="#{car.addoption}"> Add option </p> </a> </td>
+                    </tr>
+                    </tbody>
+                </table>
 
 
+                <h2><p th:text="#{car.alloptions}"> allopitons </p></h2>
+                <table id="allOptions">
+                    <thead>
+                    <tr>
+                        <th><p th:text="#{option.name}"> Name </p></th>
+                        <th><p th:text="#{option.description}"> Description</p></th>
+                        <th></th>
+
+                    </tr>
+                    </thead>
+                    <tfoot>
+                    <tr>
+                        <th><p th:text="#{option.name}"> Name </p></th>
+                        <th><p th:text="#{option.description}"> Description</p></th>
+                    </tr>
+                    </tfoot>
+
+                    <tbody>
 
 
-        </tr>
-        </tbody>
-    </table>
+                    <tr th:each="option  : ${optionList}">
+
+                        <td th:text="${option.name}"></td>
+
+                        <td th:text="${option.description}"></td>
+
+                        <td><a th:href="${#mvc.url('CCC#addExtraOption').arg(0, option.id).build()}"><p
+                                th:text="#{car.addoption}"> Add option </p></a></td>
 
 
-</div>
+                    </tr>
+                    </tbody>
+                </table>
 
+
+            </div>
 
 
         </div>
@@ -154,44 +149,43 @@
 </div>
 <script>
 
-    function setBasePack(id, name){
+    function setBasePack(id, name) {
         var request = $.ajax({
-            url : "/fleet/setajaxbasicpack",
-            type : "post",
-            data : "id=" + id
+            url: "/fleet/setajaxbasicpack",
+            type: "post",
+            data: "id=" + id
         });
 
-        request.done(function(data) {
+        request.done(function (data) {
             console.log(data);
             console.log(name);
-         document.getElementById("basepack").innerHTML = name;
-           var b = document.getElementById("basepack2");
+            document.getElementById("basepack").innerHTML = name;
+            var b = document.getElementById("basepack2");
             b.parentNode.removeChild(b);
 
 
         });
 
-        request.fail(function(jqXHR, textStatus, errorThrown) {
+        request.fail(function (jqXHR, textStatus, errorThrown) {
             // log the error to the console
             alert("The following error occured: " + textStatus, errorThrown);
         });
 
 
-
     }
 
-    function removeExtraPack(element){
+    function removeExtraPack(element) {
 
 
         var id = element.parentNode.parentNode.rowIndex;
 
         var request = $.ajax({
-            url : "http://localhost:8080/fleet/removeajaxextrapack",
-            type : "post",
-            data : "id=" + id
+            url: "http://localhost:8080/fleet/removeajaxextrapack",
+            type: "post",
+            data: "id=" + id
         });
 
-        request.done(function(data) {
+        request.done(function (data) {
 
             document.getElementById('extrapacks').deleteRow(id);
 
@@ -199,25 +193,25 @@
         });
 
         // callback handler that will be called on failure
-        request.fail(function(jqXHR, textStatus, errorThrown) {
+        request.fail(function (jqXHR, textStatus, errorThrown) {
             // log the error to the console
             alert("The following error occured: " + textStatus, errorThrown);
         });
 
     }
 
-    function removeExtraOption(element){
+    function removeExtraOption(element) {
 
 
         var id = element.parentNode.parentNode.rowIndex;
 
         var request = $.ajax({
-            url : "http://localhost:8080/fleet/removeajaxextraoption",
-            type : "post",
-            data : "id=" + id
+            url: "http://localhost:8080/fleet/removeajaxextraoption",
+            type: "post",
+            data: "id=" + id
         });
 
-        request.done(function(data) {
+        request.done(function (data) {
 
             document.getElementById('extraoptions').deleteRow(id);
             console.log(data);
@@ -226,46 +220,43 @@
         });
 
         // callback handler that will be called on failure
-        request.fail(function(jqXHR, textStatus, errorThrown) {
+        request.fail(function (jqXHR, textStatus, errorThrown) {
             // log the error to the console
             alert("The following error occured: " + textStatus, errorThrown);
         });
 
     }
-    function addExtraPack(id, name){
+    function addExtraPack(id, name) {
 
 
         var request = $.ajax({
-            url : "http://localhost:8080/fleet/addajaxextrapack",
-            type : "post",
-            data : "id=" + id
+            url: "http://localhost:8080/fleet/addajaxextrapack",
+            type: "post",
+            data: "id=" + id
         });
 
 
-        request.done(function(data) {
+        request.done(function (data) {
             var tableRef = document.getElementById('extrapacks');
             console.log(tableRef);
             console.log(name);
-                /*
-            if(!undefined ) {
-                document.getElementById('selectedoptions').appendChild(document.createElement('tbody'));
-                tableRef = document.getElementById('selectedoptions').getElementsByTagName('tbody')[0];
-            }
-            var rownumber = tableRef.rows.length;
-            */
+            /*
+             if(!undefined ) {
+             document.getElementById('selectedoptions').appendChild(document.createElement('tbody'));
+             tableRef = document.getElementById('selectedoptions').getElementsByTagName('tbody')[0];
+             }
+             var rownumber = tableRef.rows.length;
+             */
 // Insert a row in the table at the last row
-            var newRow   = tableRef.insertRow(tableRef.rows.length);
-
-
-
+            var newRow = tableRef.insertRow(tableRef.rows.length);
 
 
 // Insert a cell in the row at index 0
-            var newCell  = newRow.insertCell(0);
+            var newCell = newRow.insertCell(0);
             var newCell2 = newRow.insertCell(1);
 
 // Append a text node to the cell
-            var newText  = document.createTextNode(name)
+            var newText = document.createTextNode(name)
             newCell.appendChild(newText);
 
             var a = document.createElement('a');
@@ -274,25 +265,23 @@
             a.title = "Remove";
 
             var nbr = tableRef.getElementsByTagName('tr').length;
-            a.onclick = function() {
+            a.onclick = function () {
                 removeExtraPack(this);
             }
             a.className = "btn btn-primary form-control";
 
 
-            var newText2  = document.createTextNode(id)
+            var newText2 = document.createTextNode(id)
             newCell2.appendChild(a);
-
 
 
         });
 
         // callback handler that will be called on failure
-        request.fail(function(jqXHR, textStatus, errorThrown) {
+        request.fail(function (jqXHR, textStatus, errorThrown) {
             // log the error to the console
             alert("The following error occured: " + textStatus, errorThrown);
         });
-
 
 
     }
