--- a/webapp/src/main/resources/templates/employees/overview.html
+++ b/webapp/src/main/resources/templates/employees/overview.html
@@ -8,6 +8,13 @@
 
     <div class="row">
         <div class="col-lg-12">
+            <div th:if="${passwordEdit != null}">
+                <div class="alert alert-success alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    Password Changed
+                </div>
+            </div>
             <H2>Personal Overview</H2>
 
             <div id="employeeInfo" style="width: 49%; float:left;">
