--- a/webapp/src/main/resources/templates/fleet/car-detail.html
+++ b/webapp/src/main/resources/templates/fleet/car-detail.html
@@ -1,6 +1,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/fragments :: head"></head>
 <body>
+<div th:replace="fragments/fragments :: div.scripts"></div>
+<script type="text/javascript" charset="utf-8">
+    $(document).ready( function () {
+        $('#usageTable').dataTable();
+    } );
+    $(document).ready( function () {
+        $('#historyTable').dataTable();
+    } );
+</script>
 <div th:replace="fragments/fragments :: header"></div>
 
 <div class="container">
@@ -14,184 +23,218 @@
 
             <div>
                 <div id="carDetails" style="width: 50%; float: left" th:with="car=${carDetails.orderedCar.car}">
-                    <h3>Car details</h3>
+                    <h3>Car details
+                        <small> - <a href="#carDetails-inner" data-toggle="collapse">Hide/Show</a></small>
+                    </h3>
+                    <div id="carDetails-inner" class="collapse in">
+                        <p>Brand: <span th:text="${car.brand}">brand</span></p>
 
-                    <p>Brand: <span th:text="${car.brand}">brand</span></p>
+                        <p>Model: <span th:text="${car.model}">model</span></p>
 
-                    <p>Model: <span th:text="${car.model}">model</span></p>
+                        <p>Category: <span th:text="${car.category}">category</span></p>
 
-                    <p>Category: <span th:text="${car.category}">category</span></p>
+                        <p>Horse Power: <span th:text="${#numbers.formatDecimal(car.pk,1,2)}">pk</span></p>
 
-                    <p>Horse Power: <span th:text="${#numbers.formatDecimal(car.pk,1,2)}">pk</span></p>
+                        <p>Fiscal Horse Power: <span
+                                th:text="${#numbers.formatDecimal(car.fiscalHP,1,2)}">fiscalHp</span></p>
 
-                    <p>Fiscal Horse Power: <span th:text="${#numbers.formatDecimal(car.fiscalHP,1,2)}">fiscalHp</span></p>
+                        <p>Emission: <span th:text="${#numbers.formatDecimal(car.emission,1,2)}">emission</span></p>
 
-                    <p>Emission: <span th:text="${#numbers.formatDecimal(car.emission,1,2)}">emission</span></p>
+                        <p>Fuel type: <span th:text="${car.fuelType}">fuelType</span></p>
 
-                    <p>Fuel type: <span th:text="${car.fuelType}">fuelType</span></p>
+                        <p>Car type: <span th:text="${car.carType}">carType</span></p>
 
-                    <p>Car type: <span th:text="${car.carType}">carType</span></p>
+                        <p>Delivery time: <span th:text="${car.deliveryTime}">carType</span> months</p>
 
-                    <p>Delivery time: <span th:text="${car.deliveryTime}">carType</span> months</p>
+                        <p>Ideal km: <span th:text="${car.idealKm}">idealKm</span></p>
 
-                    <p>Ideal km: <span th:text="${car.idealKm}">idealKm</span></p>
+                        <p>Max km: <span th:text="${car.maxKm}">maxKm</span></p>
 
-                    <p>Max km: <span th:text="${car.maxKm}">maxKm</span></p>
+                        <p>List price: €<span th:text="${#numbers.formatDecimal(car.listPrice,1,2)}">listPrice</span>
+                        </p>
 
-                    <p>List price: €<span th:text="${#numbers.formatDecimal(car.listPrice,1,2)}">listPrice</span></p>
-
-                    <p>Benefit: €<span th:text="${#numbers.formatDecimal(car.benefit,1,2)}">benefit</span></p>
+                        <p>Benefit: €<span th:text="${#numbers.formatDecimal(car.benefit,1,2)}">benefit</span></p>
+                    </div>
                 </div>
 
                 <div id="basePackDetails" style="width: 50%; float: right" th:with="car=${carDetails.orderedCar.car}">
                     <h2></h2>
 
-                    <h3>Base Pack</h3>
-                    <h4 th:text="${car.basePack.name}">basePackName</h4>
+                    <h3>Base Pack
+                        <small> - <a href="#basePackDetails-inner" data-toggle="collapse">Hide/Show</a></small>
+                    </h3>
+                    <div id="basePackDetails-inner" class="collapse in">
+                        <h4 th:text="${car.basePack.name}">basePackName</h4>
 
-                    <p>price: €<span th:text="${#numbers.formatDecimal(car.basePack.price,1,2)}">basePackPrice</span></p>
-                    <h5>Options:</h5>
-                    <ul>
-                        <li th:each="option : ${car.basePack.carOptions}">
-                            <h6 th:text="${option.name}"></h6>
+                        <p>price: €<span
+                                th:text="${#numbers.formatDecimal(car.basePack.price,1,2)}">basePackPrice</span></p>
+                        <h5>Options:</h5>
+                        <ul>
+                            <li th:each="option : ${car.basePack.carOptions}">
+                                <h6 th:text="${option.name}"></h6>
 
-                            <p th:text="${option.description}"></p>
-                        </li>
-                    </ul>
+                                <p th:text="${option.description}"></p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
             <div id="pictures" th:with="car=${carDetails.orderedCar.car}">
-                <h3>Pictures</h3>
-                <a th:each="imgLink : ${car.pictures}" th:href="${imgLink}">
-                    <img th:src="${imgLink}" height="400" width="500" class="img-thumbnail"/>
-                </a>
+                <h3>Pictures
+                    <small> - <a href="#pictures-inner" data-toggle="collapse">Hide/Show</a></small>
+                </h3>
+                <div id="pictures-inner" class="collapse in">
+                    <a th:each="imgLink : ${car.pictures}" th:href="${imgLink}">
+                        <img th:src="${imgLink}" height="400" width="500" class="img-thumbnail"/>
+                    </a>
+                </div>
             </div>
 
             <div id="orderSpecificDetails" th:with="orderDetails=${carDetails.orderedCar}">
-                <h3>Extra Details</h3>
+                <h3>Extra Details
+                    <small> - <a href="#orderSpecificDetails-inner" data-toggle="collapse">Hide/Show</a></small>
+                </h3>
+                <div id="orderSpecificDetails-inner" class="collapse in">
+                    <p>Price: <span
+                            th:text="${#numbers.formatDecimal(orderDetails.price,1,2)}"></span><span> - Color: <span
+                            th:text="${orderDetails.color}"></span></span></p>
 
-                <p>Price: <span th:text="${#numbers.formatDecimal(orderDetails.price,1,2)}"></span><span> - Color: <span
-                        th:text="${orderDetails.color}"></span></span></p>
+                    <p>Order date: <span
+                            th:text="${#dates.format(carDetails.orderDate, #messages.msg('app.dateformat'))}"></span><span> - Start date: <span
+                            th:text="${#dates.format(carDetails.startDate, #messages.msg('app.dateformat'))}"></span></span>
+                    </p>
 
-                <p>Order date: <span
-                        th:text="${#dates.format(carDetails.orderDate, #messages.msg('app.dateformat'))}"></span><span> - Start date: <span
-                        th:text="${#dates.format(carDetails.startDate, #messages.msg('app.dateformat'))}"></span></span></p>
-                <p>Initial end date: <span
-                        th:text="${#dates.format(carDetails.initialEndDate, #messages.msg('app.dateformat'))}"></span>
-                </p>
+                    <p>Initial end date: <span
+                            th:text="${#dates.format(carDetails.initialEndDate, #messages.msg('app.dateformat'))}"></span>
+                    </p>
 
-                <div id="extraPacks" th:with="packs=${orderDetails.packs}">
-                    <h4>Extra Packs</h4>
+                    <div id="extraPacks" th:with="packs=${orderDetails.packs}">
+                        <h4>Extra Packs
+                            <small> - <a href="#extraPacks-inner" data-toggle="collapse">Hide/Show</a></small>
+                        </h4>
+                        <div id="extraPacks-inner" class="collapse in">
+                            <p th:if="${packs.isEmpty()}">None</p>
+                            <table class="table" th:if="${!packs.isEmpty()}">
+                                <thead>
+                                <th>Name</th>
+                                <th>Options</th>
+                                </thead>
+                                <tbody>
+                                <tr th:each="pack : ${packs}">
+                                    <td th:text="${pack.name}"></td>
+                                    <td>
+                                        <ul>
+                                            <li th:each="option : ${pack.carOptions}">
+                                                <h5 th:text="${option.name}">optionName</h5>
 
-                    <p th:if="${packs.isEmpty()}">None</p>
-                    <table class="table" th:if="${!packs.isEmpty()}">
-                        <thead>
-                        <th>Name</th>
-                        <th>Options</th>
-                        </thead>
-                        <tbody>
-                        <tr th:each="pack : ${packs}">
-                            <td th:text="${pack.name}"></td>
-                            <td>
-                                <ul>
-                                    <li th:each="option : ${pack.carOptions}">
-                                        <h5 th:text="${option.name}">optionName</h5>
+                                                <p th:text="${option.description}">optionDescription</p>
+                                            </li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
 
-                                        <p th:text="${option.description}">optionDescription</p>
-                                    </li>
-                                </ul>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div id="extraOptions" th:with="options=${orderDetails.options}">
-                    <h4>Extra Options</h4>
-
-                    <p th:if="${options.isEmpty()}">None</p>
-                    <table class="table" th:if="${!options.isEmpty()}">
-                        <thead>
-                        <th>Name</th>
-                        <th>Description</th>
-                        </thead>
-                        <tbody>
-                        <tr th:each="option : ${options}">
-                            <td th:text="${option.name}">optionName</td>
-                            <td th:text="${option.description}">optionDescription</td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <div id="extraOptions" th:with="options=${orderDetails.options}">
+                        <h4>Extra Options
+                            <small> - <a href="#extraOptions-inner" data-toggle="collapse">Hide/Show</a></small>
+                        </h4>
+                        <div id="extraOptions-inner" class="collapse in">
+                            <p th:if="${options.isEmpty()}">None</p>
+                            <table class="table" th:if="${!options.isEmpty()}">
+                                <thead>
+                                <th>Name</th>
+                                <th>Description</th>
+                                </thead>
+                                <tbody>
+                                <tr th:each="option : ${options}">
+                                    <td th:text="${option.name}">optionName</td>
+                                    <td th:text="${option.description}">optionDescription</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div id="usageUpdates" th:with="updates=${carDetails.usageUpdates}">
-            <h3>Usage Updates</h3>
-
-            <p th:if="${updates.isEmpty()}">Nothing to report.</p>
-            <table class="table" th:if="${!updates.isEmpty()}">
-                <thead>
-                <th>Date Received Update</th>
-                <th>New Amount of Km</th>
-                <th>Amount Fuelled Since Last Update (liter)</th>
-                <th>Total paid For Fuel</th>
-                </thead>
-                <tbody>
-                <tr th:each="update : ${updates}">
-                    <td th:text="${#dates.format(update.updateDate, #messages.msg('app.dateformat'))}"></td>
-                    <td th:text="${update.newTotalKm}"></td>
-                    <td th:text="${#numbers.formatDecimal(update.totalFuelledForPeriod,1,2)}"></td>
-                    <td>€ <span th:text="${#numbers.formatDecimal(update.totalFuelPrice,1,2)}"></span></td>
-                </tr>
-                </tbody>
-            </table>
+            <h3>Usage Updates
+                <small> - <a href="#usageUpdates-inner" data-toggle="collapse">Hide/Show</a></small>
+            </h3>
+            <div id="usageUpdates-inner" class="collapse in">
+                <p th:if="${updates.isEmpty()}">Nothing to report.</p>
+                <table id="usageTable" class="table" th:if="${!updates.isEmpty()}">
+                    <thead>
+                    <th>Date Received Update</th>
+                    <th>New Amount of Km</th>
+                    <th>Amount Fuelled Since Last Update (liter)</th>
+                    <th>Total paid For Fuel</th>
+                    </thead>
+                    <tbody>
+                    <tr th:each="update : ${updates}">
+                        <td th:text="${#dates.format(update.updateDate, #messages.msg('app.dateformat'))}"></td>
+                        <td th:text="${update.newTotalKm}"></td>
+                        <td th:text="${#numbers.formatDecimal(update.totalFuelledForPeriod,1,2)}"></td>
+                        <td>€ <span th:text="${#numbers.formatDecimal(update.totalFuelPrice,1,2)}"></span></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <div id="history" th:with="historyRecords=${carDetails.historyRecords}">
-            <h3>Usage History</h3>
+            <h3>Usage History
+                <small> - <a href="#history-inner" data-toggle="collapse">Hide/Show</a></small>
+            </h3>
+            <div id="history-inner" class="collapse in">
+                <p th:if="${historyRecords.isEmpty()}">Nothing to report.</p>
 
-            <p th:if="${historyRecords.isEmpty()}">Nothing to report.</p>
-
-            <p>Start date: <span th:text="${#dates.format(carDetails.startDate, #messages.msg('app.dateformat'))}">startDate</span>
-            </p>
-            <table class="table" th:if="${!historyRecords.isEmpty()}">
-                <thead>
-                <th>Employee</th>
-                <th>Driven Until</th>
-                <th>Until Mileage</th>
-                </thead>
-                <tbody>
-                <tr th:each="record : ${historyRecords}">
-                    <td th:text="${record.employee.name}"></td>
-                    <td th:text="${#dates.format(record.drivenUntil, #messages.msg('app.dateformat'))}"></td>
-                    <td th:text="${record.lastKm}"></td>
-                </tr>
-                </tbody>
-            </table>
+                <p>Start date: <span th:text="${#dates.format(carDetails.startDate, #messages.msg('app.dateformat'))}">startDate</span>
+                </p>
+                <table id="historyTable" class="table" th:if="${!historyRecords.isEmpty()}">
+                    <thead>
+                    <th>Employee</th>
+                    <th>Driven Until</th>
+                    <th>Until Mileage</th>
+                    </thead>
+                    <tbody>
+                    <tr th:each="record : ${historyRecords}">
+                        <td th:text="${record.employee.name}"></td>
+                        <td th:text="${#dates.format(record.drivenUntil, #messages.msg('app.dateformat'))}"></td>
+                        <td th:text="${record.lastKm}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <div id="employeeDetails" th:with="employee=${carDetails.employee}" th:if="${carDetails.employee != null}">
-            <h3>Current Employee Details</h3>
+            <h3>Current Employee Details
+                <small> - <a href="#employeeDetails-inner" data-toggle="collapse">Hide/Show</a></small>
+            </h3>
+            <div id="employeeDetails-inner" class="collapse in">
+                <p>Name: <span th:text="${employee.name}"></span></p>
 
-            <p>Name: <span th:text="${employee.name}"></span></p>
+                <p>Email: <span th:text="${employee.email}"></span></p>
 
-            <p>Email: <span th:text="${employee.email}"></span></p>
+                <p th:with="role=${employee.role.toString()}">Role:
+                    <span th:if="${role == 'ROLE_FLEET'}">Fleet</span>
+                    <span th:if="${role == 'ROLE_NORMAL'}">Normal</span>
+                </p>
 
-            <p th:with="role=${employee.role.toString()}">Role:
-                <span th:if="${role == 'ROLE_FLEET'}">Fleet</span>
-                <span th:if="${role == 'ROLE_NORMAL'}">Normal</span>
-            </p>
+                <p>Functional level: <span th:text="${employee.functionalLevel}"></span></p>
 
-            <p>Functional level: <span th:text="${employee.functionalLevel}"></span></p>
-
-            <p>License Plate: <span th:text="${carDetails.licensePlate}"></span></p>
+                <p>License Plate: <span th:text="${carDetails.licensePlate}"></span></p>
+            </div>
         </div>
     </div>
 
     <hr/>
 </div>
 
-<div th:replace="fragments/fragments :: div.scripts"></div>
 </body>
 </html>
